@@ -1,1 +1,4 @@
+v 2
+- lock ffprobe to latest release version 2.8.3
+
 v 1 (initial release)
